--- a/styles/bootstrap.css
+++ b/styles/bootstrap.css
@@ -1608,6 +1608,7 @@ pre code {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  max-width: 1440px;
 }
 .row {
   margin-right: -15px;
