--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,7 @@ body{
     background-size: cover;
 }
 
+
 /*************************
 ****HEADER ET FOOTER******
 *************************/
@@ -526,6 +527,9 @@ p.brand {
 .space {
     margin: 60px 0;
 }
+.space_top_bottom{
+  margin: 60px 0;
+}
 section.brand {
     background-color: #FFF;
     padding: 60px;
@@ -589,9 +593,7 @@ section.brand {
 }
 .step_page_wb{
   background-color: #fff;
-  width: 60%;
-  padding: 60px 0;
-  margin: 0 auto;
+  padding: 60px;
 }
 .step_page_w {
     background-color: #fff;
@@ -607,8 +609,19 @@ section.brand {
     background-color: #fff;
     padding: 60px;
 }
-.step_page_w_ombre::before {
-
+section.step_page_w_ombre::before {
+  content: "";
+  position:  relative;
+  top:-60px;
+  left: -60px;
+  display: block;
+  height: 5px;
+  width: 150%;
+  -moz-box-shadow: 0px -5px 5px 0px #656565;
+  -webkit-box-shadow: 0px -5px 5px 0px #656565;
+  -o-box-shadow: 0px -5px 5px 0px #656565;
+  box-shadow: 0px -5px 5px 0px #656565;
+  filter:progid:DXImageTransform.Microsoft.Shadow(color=#656565, Direction=90, Strength=5);
 }
 .step_page_b{
     background-color: #32c7c7;
@@ -673,6 +686,12 @@ footer.project_footer_sm {
 footer.project_footer_pgs {
     height: 387px;
     background: url('../images/blur_footer_peugeot_scoot.png') center top no-repeat;
+    background-size: cover;
+    position: relative !important;
+}
+footer.project_footer_pgp {
+    height: 387px;
+    background: url('../images/blur_footer_peugeot_pro.png') center top no-repeat;
     background-size: cover;
     position: relative !important;
 }
